--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,15 @@
 <h1>Sign Up Below:</h1>
 
 
+
+<form action="/registrations" method="post">
+   <p>Name:  <label for="name">Name</label></p>
+    <input type="text" id="name" name="name"></input>
+    
+   <p>Email: <label for="email">Name</label></p>
+    <input type="text" id="email" name="email"></input>
+    
+    <p>Password: <label for="password">Name</label></p>
+    <input type="text" id="password" name="password"></input>
+    <input type="submit" value="submit">
+</form>
