--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -2,14 +2,9 @@
 
 
 
-<form action="/registrations" method="post">
-   <p>Name:  <label for="name">Name</label></p>
-    <input type="text" id="name" name="name"></input>
-    
-   <p>Email: <label for="email">Name</label></p>
-    <input type="text" id="email" name="email"></input>
-    
-    <p>Password: <label for="password">Name</label></p>
-    <input type="text" id="password" name="password"></input>
-    <input type="submit" value="submit">
+<form method="POST" action="/registrations">
+  Name: <input type="text" name="name" placeholder="Jon Doe"> 
+  Email: <input type="text" name="email" placeholder="jon@example.com"> 
+  Password: <input type="password" name="password"> 
+  <input type="submit" value="Sign Up">
 </form>
